force-app/main/default/objects/ABCL_CX360_Quick_Actions__mdt/ABCL_CX360_Quick_Actions__mdt.object-meta.xml
<CustomObject>
    <description>Business Unit and related Quick Actions</description>
    <label>ABCL CX360 Quick Actions</label>
    <pluralLabel>ABCL CX360 Quick Actions</pluralLabel>
</CustomObject>