force-app/main/default/objects/ABCL_CX360_Quick_Actions__mdt/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABFL</fullName>
                <default>true</default>
                <label>ABFL</label>
            </value>
            <value>
                <fullName>ABHFL</fullName>
            </value>
            <value>
                <fullName>ABWM</fullName>
            </value>
            <value>
                <fullName>ABSLIG</fullName>
            </value>
            <value>
                <fullName>PAYMENTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>