force-app/main/default/objects/ABCL_CX360_Quick_Actions__mdt/listViews/ABHFL_Quick_Actions.listView-meta.xml
<ListView>
    <fullName>ABHFL_Quick_Actions</fullName>
    <columns>Sequence__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Business_Unit__c</columns>
    <columns>Icon_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>ABHFL</value>
    </filters>
    <label>ABHFL Quick Actions</label>
</ListView>